--- a/style_151214.css
+++ b/style_151214.css
@@ -217,7 +217,7 @@ footer p{
 .showworks ul li section{
 	width:289px;
 	height:215px;
-	background:url(http://i.imgur.com/wt2LBz6.jpg) no-repeat;
+	background:url(http://i.imgur.com/0gqUByW.jpg) no-repeat;
 	cursor: pointer;
 }
 .showworks ul li section div{
