--- a/style.css
+++ b/style.css
@@ -56,6 +56,8 @@ header {
 	float:left;
 	clear:both;
 	font-size: 24px;
+	line-height: 40px;
+    	letter-spacing: 2px;
 }
 .slider {
 	width:100%;
